tests/ui/structure/02_no_type_params.rs
use funcmap::FuncMap;

#[derive(FuncMap)]
struct Test<'a, const N: usize>(&'a ());

fn main() {}
